Update body-footer-link 'Website"
Update footer-link 'Website" href to point to GitHub pages hosting site.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="bottom-container">
       <a class="footer-link" href="https://www.linkedin.com/in/danielmurillo21291/">LinkedIn</a>
       <a class="footer-link" href="https://github.com/obiwancanoli">GitHub</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <a class="footer-link" href="https://obiwancanoli.github.io/dm_website/">Website</a>
       <p class="copyright">© Daniel Murillo 2022.</p>
     </div>
 
