Update footer link/Update mailto
Update href in website to point to github pages hosting. 

Update mailto to contactdanielmurillo@gmail.com

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <h2>Get In Touch</h2>
         <p class="contact-message">If you have any questions, send me a message and I'll be in touch as soon as I can!
         </p>
-        <a class="btn" href="mailto:dmurillo21291@gmail.com"target="_blank">CONTACT ME</a>
+        <a class="btn" href="mailto:contactdanielmurillo@gmail.com"target="_blank">CONTACT ME</a>
       </div>
     </div>
 
