Edit <p> line in "film_para"
-removed line of text in <p> "film-para"

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <img class="camera_vector" src="images/camera.png" alt="moviecamera_image_vector">
           <h3 class="film_title">Film Editing and Graphic Design</h3>
           <p class="film_para">Having graduated from California State University, Fullerton in 2015 with a BA in Radio/TV/Film, I have implemented many of those acquired editing and design skills into my software development.
-            My attention to aesthetics, user experience and knowledge of digital media has helped me overcome many software design barriers that would have otherwise slowed my process. Take a look at some of my work here!</p>
+            My attention to aesthetics, user experience and knowledge of digital media has helped me overcome many software design barriers that would have otherwise slowed my process.</p>
         </div>
       </div>
       <hr>
