--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <h1 class="display-5 fw-bold projects-title">Password Manager</h1>
                 <p class="projects-para">MyPass is a desktop password manager application made in Python that can create and save passwords for you on your system! Enter the website you want to enter followed by your email/username and password you want to set by clicking "Add".<br> <br> You can click the "Generate Password" button to randomly generate a password for you. To find a password you set, type in the name of the Website it was saved under then click "Search." <br> <br> The password will be auto-copied to your clipboard for easy pasting into websites.</p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                  <a href="https://github.com/obiwancanoli/passwordmanager.git" target="_blank"<button type="button" class="btn btn-warning btn-lg px-4">Download</button></a>
+                  <a href="https://github.com/obiwancanoli/passwordmanager.git" target="_blank"><button type="button" class="btn btn-warning btn-lg px-4">Download</button></a>
                 </div>
               </div>
             </div>
@@ -115,7 +115,7 @@
                 <h1 class="display-5 fw-bold projects-title">Frogger-Style Game</h1>
                 <p class="projects-para">TurtleRoad is a desktop game application made with Python! Get the turtle across the road without getting hit by a car. <br> <br> Each level increases the speed of the cars as well as adds more to the road.</p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                  <a href="https://github.com/obiwancanoli/turtleroad.git"><button type="button" class="btn btn-warning btn-lg px-4">Download</button></a>
+                  <a href="https://github.com/obiwancanoli/turtleroad.git" target="_blank"><button type="button" class="btn btn-warning btn-lg px-4">Download</button></a>
                 </div>
               </div>
             </div>
